--- a/test.html
+++ b/test.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>test</p>
+    <nav></nav>
+    <div></div>
+    <div></div>
+    <footer></footer>
 </body>
 </html>
