--- a/test.html
+++ b/test.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Codees Academy</title>
+    <link rel="stylesheet" href="reset.css"/>
+	<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <nav></nav>
+    <nav>
+        <a href="#">
+            <img src="assets/logo.svg" alt="code">
+        </a>
+        <a href="#" class="nav-text">Kelas</a>
+        <a href="#" class="nav-text">Acara</a>
+        <a href="#" class="nav-text">Beasiswa</a>
+        <a href="#" class="nav-text">Kontak</a>
+        <a href="#" id="login">Masuk</a>
+    </nav>
     <div></div>
     <div></div>
     <footer></footer>
