--- a/test.html
+++ b/test.html
@@ -7,10 +7,13 @@
     <title>Codees Academy</title>
     <link rel="stylesheet" href="reset.css"/>
 	<link rel="stylesheet" href="style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap">
 </head>
 <body>
     <nav>
-        <a href="#">
+        <a href="#" id="nav-logo">
             <img src="assets/logo.svg" alt="code">
         </a>
         <a href="#" class="nav-text">Kelas</a>
@@ -19,7 +22,9 @@
         <a href="#" class="nav-text">Kontak</a>
         <a href="#" id="login">Masuk</a>
     </nav>
-    <div></div>
+    <div class="page-1">
+        <h1>Pelajari dan bangun skill.coding kamu di Codees Academy</h1>
+    </div>
     <div></div>
     <footer></footer>
 </body>
