--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codees Academy</title>
+    <link rel="shortcut icon" href="assets/logo.svg">
     <link rel="stylesheet" href="reset.css"/>
 	<link rel="stylesheet" href="style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +15,7 @@
 <body>
     <nav>
         <a href="#" id="nav-logo">
-            <img src="assets/logo.svg" alt="code">
+            <img src="assets/logo.svg" alt="codees-academy-logo">
         </a>
         <a href="#" class="nav-text">Kelas</a>
         <a href="#" class="nav-text">Acara</a>
@@ -22,8 +23,11 @@
         <a href="#" class="nav-text">Kontak</a>
         <a href="#" id="login">Masuk</a>
     </nav>
-    <div class="page-1">
-        <h1>Pelajari dan bangun skill.coding kamu di Codees Academy</h1>
+    <div class="part-1">
+        <h1>Pelajari dan bangun skill coding kamu di Codees Academy</h1>
+        <p></p>
+        <a href="#class">Ambil Kelas Sekang</a>
+        <img src="icons8-team-yTwXpLO5HAA-unsplash-removebg-preview.png" alt="">
     </div>
     <div></div>
     <footer></footer>
