--- a/index.html
+++ b/index.html
@@ -23,13 +23,17 @@
         <a href="#" class="nav-text">Kontak</a>
         <a href="#" id="login">Masuk</a>
     </nav>
-    <div class="part-1">
-        <h1>Pelajari dan bangun skill coding kamu di Codees Academy</h1>
-        <p></p>
-        <a href="#class">Ambil Kelas Sekang</a>
-        <img src="icons8-team-yTwXpLO5HAA-unsplash-removebg-preview.png" alt="">
+    <div id="part-1" class="flex-container">
+        <div class="left">
+            <h1>Pelajari dan bangun<br>skill <span>coding</span> kamu di<br>Codees Academy</h1>
+            <p>kamu akan diarahkan dan diajarkan oleh para developer<br>profesional dari codees academy</p>
+            <a href="#class">Ambil Kelas Sekang</a>
+        </div>
+        <div class="right">
+            <img src="assets/image-1.png" alt="learn">
+        </div>
     </div>
     <div></div>
-    <footer></footer>
+    <footer>&copy; 2022 codess academy. All rights reserved.</footer>
 </body>
 </html>
