--- a/index.html
+++ b/index.html
@@ -33,7 +33,20 @@
             <img src="assets/image-1.png" alt="learn">
         </div>
     </div>
-    <div></div>
+    <div id="part-2">
+        <h2>Pilih kelas populer<br>untuk mahasiswa</h2>
+        <div class="flex-container">
+            <div class="box-container">
+                <img src="assets/image-2.png" alt="">
+                <div>
+                    <p class="class-text">Back-End Develo...</p>
+                    <p class="price-text">Rp. 235.000</p>
+                    <p></p>
+                </div>
+                <a href="#" class="get-class-text">Ambil Kelas</a>
+            </div>
+        </div>
+    </div>
     <footer>&copy; 2022 codess academy. All rights reserved.</footer>
 </body>
 </html>
