--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="left">
             <h1>Pelajari dan bangun<br>skill <span>coding</span> kamu di<br>Codees Academy</h1>
             <p>kamu akan diarahkan dan diajarkan oleh para developer<br>profesional dari codees academy</p>
-            <a href="#class">Ambil Kelas Sekang</a>
+            <a href="#part-2">Ambil Kelas Sekang</a>
         </div>
         <div class="right">
             <img src="assets/image-1.png" alt="learn">
@@ -38,15 +38,135 @@
         <div class="flex-container">
             <div class="box-container">
                 <img src="assets/image-2.png" alt="">
-                <div>
-                    <p class="class-text">Back-End Develo...</p>
-                    <p class="price-text">Rp. 235.000</p>
-                    <p></p>
+                <div class="box-text-container">
+                    <div class="materials-text-1">
+                        <p class="course-text">Back-End Develo...</p>
+                        <p class="price-text">Rp. 235.000</p>
+                    </div>
+                    <div class="materials-text-2">
+                        <div class="materials-text-2-box">
+                            <img src="assets/materials-shape.svg" alt="materials">
+                            <p>12 Materi</p>
+                        </div>
+                    </div>
                 </div>
-                <a href="#" class="get-class-text">Ambil Kelas</a>
+                <a href="#" class="get-course-text">Ambil Kelas</a>
+            </div>
+            <div class="box-container">
+                <img src="assets/image-2.png" alt="">
+                <div class="box-text-container">
+                    <div class="materials-text-1">
+                        <p class="course-text">Back-End Develo...</p>
+                        <p class="price-text">Rp. 235.000</p>
+                    </div>
+                    <div class="materials-text-2">
+                        <div class="materials-text-2-box">
+                            <img src="assets/materials-shape.svg" alt="materials">
+                            <p>12 Materi</p>
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="get-course-text">Ambil Kelas</a>
+            </div>
+            <div class="box-container">
+                <img src="assets/image-2.png" alt="">
+                <div class="box-text-container">
+                    <div class="materials-text-1">
+                        <p class="course-text">Back-End Develo...</p>
+                        <p class="price-text">Rp. 235.000</p>
+                    </div>
+                    <div class="materials-text-2">
+                        <div class="materials-text-2-box">
+                            <img src="assets/materials-shape.svg" alt="materials">
+                            <p>12 Materi</p>
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="get-course-text">Ambil Kelas</a>
+            </div>
+            <div class="box-container">
+                <img src="assets/image-2.png" alt="">
+                <div class="box-text-container">
+                    <div class="materials-text-1">
+                        <p class="course-text">Back-End Develo...</p>
+                        <p class="price-text">Rp. 235.000</p>
+                    </div>
+                    <div class="materials-text-2">
+                        <div class="materials-text-2-box">
+                            <img src="assets/materials-shape.svg" alt="materials">
+                            <p>12 Materi</p>
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="get-course-text">Ambil Kelas</a>
+            </div>
+            <div class="box-container">
+                <img src="assets/image-2.png" alt="">
+                <div class="box-text-container">
+                    <div class="materials-text-1">
+                        <p class="course-text">Back-End Develo...</p>
+                        <p class="price-text">Rp. 235.000</p>
+                    </div>
+                    <div class="materials-text-2">
+                        <div class="materials-text-2-box">
+                            <img src="assets/materials-shape.svg" alt="materials">
+                            <p>12 Materi</p>
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="get-course-text">Ambil Kelas</a>
+            </div>
+            <div class="box-container">
+                <img src="assets/image-2.png" alt="">
+                <div class="box-text-container">
+                    <div class="materials-text-1">
+                        <p class="course-text">Back-End Develo...</p>
+                        <p class="price-text">Rp. 235.000</p>
+                    </div>
+                    <div class="materials-text-2">
+                        <div class="materials-text-2-box">
+                            <img src="assets/materials-shape.svg" alt="materials">
+                            <p>12 Materi</p>
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="get-course-text">Ambil Kelas</a>
+            </div>
+            <div class="box-container">
+                <img src="assets/image-2.png" alt="">
+                <div class="box-text-container">
+                    <div class="materials-text-1">
+                        <p class="course-text">Back-End Develo...</p>
+                        <p class="price-text">Rp. 235.000</p>
+                    </div>
+                    <div class="materials-text-2">
+                        <div class="materials-text-2-box">
+                            <img src="assets/materials-shape.svg" alt="materials">
+                            <p>12 Materi</p>
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="get-course-text">Ambil Kelas</a>
+            </div>
+            <div class="box-container">
+                <img src="assets/image-2.png" alt="">
+                <div class="box-text-container">
+                    <div class="materials-text-1">
+                        <p class="course-text">Back-End Develo...</p>
+                        <p class="price-text">Rp. 235.000</p>
+                    </div>
+                    <div class="materials-text-2">
+                        <div class="materials-text-2-box">
+                            <img src="assets/materials-shape.svg" alt="materials">
+                            <p>12 Materi</p>
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="get-course-text">Ambil Kelas</a>
             </div>
         </div>
     </div>
+    <div id="part-3"></div>
     <footer>&copy; 2022 codess academy. All rights reserved.</footer>
 </body>
 </html>
