--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div id="part-2">
-        <h2>Pilih kelas populer<br>untuk mahasiswa</h2>
+        <h2 class="part">Pilih kelas populer<br>untuk mahasiswa</h2>
         <div class="flex-container">
             <div class="box-container">
                 <img src="assets/image-2.png" alt="">
@@ -165,8 +165,14 @@
                 <a href="#" class="get-course-text">Ambil Kelas</a>
             </div>
         </div>
+        <div id="expand-course">
+            <a href="#">Lihat Semua</a>
+        </div>
     </div>
-    <div id="part-3"></div>
+    <div id="part-3">
+        <h3 class="part">Akses instan ke semua fitur pelatihan<br>dalam satu platform</h3>
+    </div>
+    <div id="part-4"></div>
     <footer>&copy; 2022 codess academy. All rights reserved.</footer>
 </body>
 </html>
