--- a/index.html
+++ b/index.html
@@ -172,7 +172,86 @@
     <div id="part-3">
         <h3 class="part">Akses instan ke semua fitur pelatihan<br>dalam satu platform</h3>
     </div>
-    <div id="part-4"></div>
-    <footer>&copy; 2022 codess academy. All rights reserved.</footer>
+    <div id="part-4">
+        <h4>kami membantu banyak siswa<br>untuk membuat aplikasi mereka sendiri</h4>
+        <div class="flex-container">
+            <div class="container-left">
+                <div class="box-container-left">
+                    <div class="text-1">
+                        <p>Video Materi</p>
+                        <img src="assets/videos-shape.svg" alt="videos">
+                    </div>
+                    <div class="text-2">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                            Obcaecati eaque distinctio fugiat dignissimos consequuntur 
+                            veritatis, sunt voluptatibus dolorum a voluptates sed dolore 
+                            explicabo placeat, nulla quos quia ab nisi reiciendis.</p>
+                    </div>
+                </div>
+                <div class="box-container-left">
+                    <div class="text-1">
+                        <p>Latihan coding</p>
+                        <img src="assets/code-shape.svg" alt="code">
+                    </div>
+                    <div class="text-2">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                            Obcaecati eaque distinctio fugiat dignissimos consequuntur 
+                            veritatis, sunt voluptatibus dolorum a voluptates sed dolore 
+                            explicabo placeat, nulla quos quia ab nisi reiciendis.</p>
+                    </div>
+                </div>
+                <div class="box-container-left">
+                    <div class="text-1">
+                        <p>Konsultasi</p>
+                        <img src="assets/consult-shape.svg" alt="consult">
+                    </div>
+                    <div class="text-2">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                            Obcaecati eaque distinctio fugiat dignissimos consequuntur 
+                            veritatis, sunt voluptatibus dolorum a voluptates sed dolore 
+                            explicabo placeat, nulla quos quia ab nisi reiciendis.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container-mid">
+                <div id="border-image"></div>
+                <img src="assets/image-3.jpg" alt="">
+            </div>
+            <div class="container-right">
+                <div class="box-container-right">
+                    <div class="text-1">
+                        <p>Tips n trick</p>
+                        <img src="assets/tat-shape.svg" alt="tips-n-trick">
+                    </div>
+                    <div class="text-2">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                            Obcaecati eaque distinctio fugiat dignissimos consequuntur 
+                            veritatis, sunt voluptatibus dolorum a voluptates sed dolore 
+                            explicabo placeat, nulla quos quia ab nisi reiciendis.</p>
+                    </div>
+                </div>
+                <div class="box-container-right">
+                    <div class="text-1">
+                        <p>Studi Kasus</p>
+                        <img src="assets/casestud-shape.svg" alt="case-study">
+                    </div>
+                    <div class="text-2">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                            Obcaecati eaque distinctio fugiat dignissimos consequuntur 
+                            veritatis, sunt voluptatibus dolorum a voluptates sed dolore 
+                            explicabo placeat, nulla quos quia ab nisi reiciendis.</p>
+                    </div>
+                </div>
+                <div class="box-container-right">
+                    <div class="box-exlained-total"></div>
+                    <div class="box-exlained-total"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <h5>Bingung mulai dari mana ?<br>lihat alur belajarnya aja </h5>
+        <p>&copy; 2022 codess academy. All rights reserved.</p>
+    </footer>
 </body>
 </html>
