--- a/index.html
+++ b/index.html
@@ -171,12 +171,9 @@
     </div>
     <div id="part-3">
         <h3 class="part">Akses instan ke semua fitur pelatihan<br>dalam satu platform</h3>
-    </div>
-    <div id="part-4">
-        <h4>kami membantu banyak siswa<br>untuk membuat aplikasi mereka sendiri</h4>
         <div class="flex-container">
             <div class="container-left">
-                <div class="box-container-left">
+                <div id="box-container-1-part-3" class="box-container-lr">
                     <div class="text-1">
                         <p>Video Materi</p>
                         <img src="assets/videos-shape.svg" alt="videos">
@@ -184,11 +181,10 @@
                     <div class="text-2">
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                             Obcaecati eaque distinctio fugiat dignissimos consequuntur 
-                            veritatis, sunt voluptatibus dolorum a voluptates sed dolore 
-                            explicabo placeat, nulla quos quia ab nisi reiciendis.</p>
+                            veritatis.</p>
                     </div>
                 </div>
-                <div class="box-container-left">
+                <div class="box-container-lr">
                     <div class="text-1">
                         <p>Latihan coding</p>
                         <img src="assets/code-shape.svg" alt="code">
@@ -196,11 +192,10 @@
                     <div class="text-2">
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                             Obcaecati eaque distinctio fugiat dignissimos consequuntur 
-                            veritatis, sunt voluptatibus dolorum a voluptates sed dolore 
-                            explicabo placeat, nulla quos quia ab nisi reiciendis.</p>
+                            veritatis.</p>
                     </div>
                 </div>
-                <div class="box-container-left">
+                <div id="box-container-2-part-3" class="box-container-lr">
                     <div class="text-1">
                         <p>Konsultasi</p>
                         <img src="assets/consult-shape.svg" alt="consult">
@@ -208,17 +203,15 @@
                     <div class="text-2">
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                             Obcaecati eaque distinctio fugiat dignissimos consequuntur 
-                            veritatis, sunt voluptatibus dolorum a voluptates sed dolore 
-                            explicabo placeat, nulla quos quia ab nisi reiciendis.</p>
+                            veritatis.</p>
                     </div>
                 </div>
             </div>
             <div class="container-mid">
-                <div id="border-image"></div>
-                <img src="assets/image-3.jpg" alt="">
+                <p><img src="assets/image-3.jpg" alt="smile-woman"></p>
             </div>
             <div class="container-right">
-                <div class="box-container-right">
+                <div id="box-container-3-part-3" class="box-container-lr">
                     <div class="text-1">
                         <p>Tips n trick</p>
                         <img src="assets/tat-shape.svg" alt="tips-n-trick">
@@ -226,11 +219,10 @@
                     <div class="text-2">
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                             Obcaecati eaque distinctio fugiat dignissimos consequuntur 
-                            veritatis, sunt voluptatibus dolorum a voluptates sed dolore 
-                            explicabo placeat, nulla quos quia ab nisi reiciendis.</p>
+                            veritatis.</p>
                     </div>
                 </div>
-                <div class="box-container-right">
+                <div id="box-container-4-part-3" class="box-container-lr">
                     <div class="text-1">
                         <p>Studi Kasus</p>
                         <img src="assets/casestud-shape.svg" alt="case-study">
@@ -238,20 +230,102 @@
                     <div class="text-2">
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                             Obcaecati eaque distinctio fugiat dignissimos consequuntur 
-                            veritatis, sunt voluptatibus dolorum a voluptates sed dolore 
-                            explicabo placeat, nulla quos quia ab nisi reiciendis.</p>
+                            veritatis.</p>
                     </div>
                 </div>
-                <div class="box-container-right">
-                    <div class="box-exlained-total"></div>
-                    <div class="box-exlained-total"></div>
+                <div id="box-container-5-part-3" class="box-container-end">
+                    <div class="box-explained-total">
+                        <p class="total-1">738+</p>
+                        <p  class="total-2">Mahasiswa</p>
+                    </div>
+                    <div class="box-explained-total">
+                        <p  class="total-1">32+</p>
+                        <p class="total-2">Video Materi</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <footer>
-        <h5>Bingung mulai dari mana ?<br>lihat alur belajarnya aja </h5>
-        <p>&copy; 2022 codess academy. All rights reserved.</p>
+        <h5 class="part">Bingung mulai dari mana ?<br>lihat alur belajarnya aja</h5>
+        <div id="flow">
+            <a href="#">Alur belajar</a>
+        </div>
+        <p></p>
+        <div class="flex-container">
+            <div class="left">
+                <img src="assets/logo.svg" alt="foot-logo" class="foot-left">
+                <p class="foot-left">Jl. fulanah No.52, kel. Brintani<br>kec. Kumala kota Nevan 4324</p>
+                <p class="foot-left" id="copyright">&copy; 2022 codess academy. All rights reserved.</p>
+            </div>
+            <div class="right">
+                <div class="table">
+                    <div class="table-row">
+                        <div class="table-cell head">
+                            <p>Halaman</p>
+                        </div>
+                        <div class="table-cell head">
+                            <p>Sosial Media</p>
+                        </div>
+                        <div class="table-cell head">
+                            <p>Legal</p>
+                        </div>
+                    </div>
+                    <div class="table-row">
+                        <div class="table-cell">
+                            <p>Beranda</p>
+                        </div>
+                        <div class="table-cell">
+                            <p>Instagram</p>
+                        </div>
+                        <div class="table-cell">
+                            <p>Terms</p>
+                        </div>
+                    </div>
+                    <div class="table-row">
+                        <div class="table-cell">
+                            <p>Acara</p>
+                        </div>
+                        <div class="table-cell">
+                            <p>Facebook</p>
+                        </div>
+                        <div class="table-cell">
+                            <p>Privacy</p>
+                        </div>
+                    </div>
+                    <div class="table-row">
+                        <div class="table-cell">
+                            <p>Catalog</p>
+                        </div>
+                        <div class="table-cell">
+                            <p>Twitter</p>
+                        </div>
+                        <div class="table-cell">
+                            <p>Cookies</p>
+                        </div>
+                    </div>
+                    <div class="table-row">
+                        <div class="table-cell">
+                            <p>Tentang Kami</p>
+                        </div>
+                        <div class="table-cell">
+                            <p>Behance</p>
+                        </div>
+                        <div class="table-cell">
+                            <p>Kontak</p>
+                        </div>
+                    </div>
+                    <div class="table-row">
+                        <div class="table-cell">
+                            <p>Blog</p>
+                        </div>
+                        <div class="table-cell">
+                            <p>Linkedin</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
